frostwire (5.5.1) stable; urgency=high
  * New Clear Inactive button on transfers.
  * New setting to use the default system media player instead of FrostWire's (TODO)
  * Bug fix: filtering on torrent detail dialog was broken.

 -- FrostWire Team <contact@frostwire.com>  Wed, 05 Dec 2012 16:00:00 -0500

frostwire (5.5.0) stable; urgency=high
  * New FrostWire video player.
  * New audio preview on cloud based audio search results.
  * New video preview on cloud based video search results.
  * New Wi-Fi sharing between FrostWire for Desktop and Android.
  * New Wi-Fi sharing/announcement/discovery protocol via UPnP standards.
  * New Stream Video/Audio stored shared on Android devices.
  * UX Improvement: Add folders to library with drag and drop on
    library tree.
  * UX Improvement: cloud audio downloads now have album art.
  * Core Search Performance lowers CPU usage dramatically while indexing.
  * Core Improvement: broader compatibility on cloud demuxed downloads.
  * UI Improvement: partial download/torrent content window now includes
    file extension, file type icon.
  * UI Improvement: when opening youtube url, the file selection dialog
    has type/quality hints to guide user on the options available for
    download.
  * UI Improvement: audio player simplified, no stop button.
  * UI Improvement: Transfer manager now has 'Clear Inactive' button.
  * Bug fix: Run on startup for Mac finally works. The BitTorrent network
    will get a boost of upstream bandwidth.

 -- FrostWire Team <contact@frostwire.com>  Thu, 29 Nov 2012 16:00:00 -0500

frostwire (5.4.0) stable; urgency=high
  * No more sound distortion with the FrostWire player volume levels.
  * Search engines update.
  * UX Upgrade: Only one file type per search. Users were getting confused
    with mixed file types in results.
  * UX Upgrade: Forbid multiple selection on partial file selection dialog.

 -- FrostWire Team <contact@frostwire.com>  Mon, 17 Sep 2012 18:00:00 -0500
