@@ -57,8 +57,6 @@ import com.limegroup.gnutella.MediaType;
 import com.limegroup.gnutella.gui.GUIMediator;
 import com.limegroup.gnutella.gui.MPlayerMediator;
 import com.limegroup.gnutella.gui.RefreshListener;
-import com.limegroup.gnutella.gui.util.GUILauncher;
-import com.limegroup.gnutella.gui.util.GUILauncher.LaunchableProvider;
 import com.limegroup.gnutella.settings.PlayerSettings;
 
 /**
@@ -236,10 +234,11 @@ public abstract class MediaPlayer implements RefreshListener, MPlayerUIEventList
      * Loads a AudioSource into the player to play next
      */
     public void loadMedia(AudioSource source, boolean play, boolean playNextSong, Playlist currentPlaylist, List<AudioSource> playlistFilesView) {
-        if (true) {
-            launchInOS(source);
+        if (PlayerSettings.PLAYER_PLAY_IN_OS.getValue()) {
+            playInOS(source);
             return;
         }
+
         currentSong = source;
         this.playNextMedia = playNextSong;
         this.currentPlaylist = currentPlaylist;
@@ -917,17 +916,17 @@ public abstract class MediaPlayer implements RefreshListener, MPlayerUIEventList
         togglePause();
     }
 
-    private void launchInOS(AudioSource media) {
-        if (media == null) {
+    private void playInOS(AudioSource source) {
+        if (source == null) {
             return;
         }
 
-        if (media.getFile() != null) {
-            GUIMediator.launchFile(media.getFile());
-        } else if (media.getPlaylistItem() != null) {
-            GUIMediator.launchFile(new File(media.getPlaylistItem().getFilePath()));
-        } else if (media.getURL() != null) {
-            GUIMediator.openURL(media.getURL());
+        if (source.getFile() != null) {
+            GUIMediator.launchFile(source.getFile());
+        } else if (source.getPlaylistItem() != null) {
+            GUIMediator.launchFile(new File(source.getPlaylistItem().getFilePath()));
+        } else if (source.getURL() != null) {
+            GUIMediator.openURL(source.getURL());
         }
     }
 }
