@@ -61,6 +61,7 @@ import com.limegroup.gnutella.gui.options.panes.LibraryInternetRadioPaneItem;
 import com.limegroup.gnutella.gui.options.panes.MaximumSearchesPaneItem;
 import com.limegroup.gnutella.gui.options.panes.NetworkInterfacePaneItem;
 import com.limegroup.gnutella.gui.options.panes.NotificationsPaneItem;
+import com.limegroup.gnutella.gui.options.panes.PlayerPaneItem;
 import com.limegroup.gnutella.gui.options.panes.PopupsPaneItem;
 import com.limegroup.gnutella.gui.options.panes.ProxyLoginPaneItem;
 import com.limegroup.gnutella.gui.options.panes.ProxyPaneItem;
@@ -135,6 +136,7 @@ public final class OptionsConstructor {
     static final String UPDATE_KEY = "OPTIONS_UPDATE_MAIN_TITLE";
     static final String CHAT_KEY = "OPTIONS_CHAT_MAIN_TITLE";
     public static final String LIBRARY_KEY = "OPTIONS_LIBRARY_MAIN_TITLE";
+    static final String PLAYER_KEY = "OPTIONS_PLAYER_MAIN_TITLE";
     static final String STATUS_BAR_KEY = "OPTIONS_STATUS_BAR_MAIN_TITLE";
     static final String ITUNES_KEY = "OPTIONS_ITUNES_MAIN_TITLE";
     static final String ITUNES_IMPORT_KEY = "OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE";
@@ -274,6 +276,9 @@ public final class OptionsConstructor {
 
         // library
         addOption(OptionsMediator.ROOT_NODE_KEY, LIBRARY_KEY, I18n.tr("Library"), LibraryFoldersPaneItem.class, WiFiSharingPaneItem.class, LibraryInternetRadioPaneItem.class);
+
+        // player
+        addOption(OptionsMediator.ROOT_NODE_KEY, PLAYER_KEY, I18n.tr("Player"), PlayerPaneItem.class);
 
         // search options
         addOption(OptionsMediator.ROOT_NODE_KEY, SEARCH_KEY, I18n.tr("Searching"), MaximumSearchesPaneItem.class, SmartSearchDBPaneItem.class, DetailsPaneItem.class);
