@@ -1,3 +1,18 @@
+/*
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package com.limegroup.gnutella.gui.options;
 
 import java.awt.Container;
@@ -15,7 +30,6 @@ import com.limegroup.gnutella.gui.options.panes.PaneItem;
  * It contains an <tt>ArrayList</tt> of <tt>PaneItem</tt> instances to 
  * forward any request to apply the current options.
  */
-//2345678|012345678|012345678|012345678|012345678|012345678|012345678|012345678|
 final class OptionsPaneImpl implements OptionsPane {
 
 	/**
